# Bioshock1REMSDK-WIP-

./: .gitignore  CMakeLists.txt  MODDING_GUIDE.md  README.md  bioshock1-bsm.md  bsp_texture_log.txt  coop_dump.txt  editor_output.txt  gnatives_dump.txt  lightmap_probe.txt  parse_output.txt  tmp_shockgame_names.txt  vert_diag.txt
.devin/workflows/: setup-build.md
.diversion/: dv.ws.a05fde44-92df-4b43-b38f-ee1588f7ab15
.windsurf/notes/: coop-investigation.md  level-editor.md  performance-rules.md
.windsurf/workflows/: setup-build.md
debug_dumps/: actor_census.txt  ai_functions.txt  client_log.txt  coop_test_results.txt  crash_report.txt  frozen_functions.txt  p2_inventory.txt  p2_inventory_log.txt  p2_state.txt  p2_system_log.txt  property_offsets.txt  session_log.txt  snapshot_20260514_122416.txt  snapshot_20260514_122515.txt  snapshot_20260514_122823.txt  snapshot_20260514_122915.txt  snapshot_20260514_123443.txt  snapshot_20260514_123917.txt  snapshot_20260514_125019.txt  snapshot_20260514_125323.txt  snapshot_20260514_125550.txt  snapshot_20260514_125623.txt  snapshot_20260514_130237.txt  snapshot_20260514_192954.txt  snapshot_20260514_194024.txt  snapshot_20260514_214554.txt  stability_report.txt  transitions_log.txt  world_sync_log.txt  world_sync_state.txt
docs/: architecture.md  engine-reference.md  level-editor-roadmap.md  sdk-capabilities-for-bio4554.md  true-coop-plan.md
docs/bio2mp_ini/: Rumble.ini
docs/reverse-engineering/: BioShock_Bulk_Files_And_Catalog.md  BioShock_Materials_And_Shaders.md  BioShock_Reading_Textures.md  BioShock_Texture_Lightmap_Format.md  LayerLighting.hlsl  bsm-format.md  co-op-feasibility.md  coop-deep-dive.md  coop-natives-map.md  engine-source-recovery.md  gameplay-goals.md
injector/: CMakeLists.txt  injector.cpp
mods/example_mod/: mod.toml
mods/example_mod/scripts/: main.lua
scripts/: autorun.lua  combat_mods.lua  debug_coop.lua  dump_all.lua  package_mod.ps1  setup.bat  teleport_mod.lua  test_freeze.lua  weapon_mods.lua
scripts/ida/: dump_objects.py
src/: CMakeLists.txt
src/assets/: bsm_parser.h
src/core/: config.cpp  config.h  dllmain.cpp  hooks.cpp  hooks.h  log.cpp  log.h  memory.cpp  memory.h  mod_config.cpp  mod_config.h  pattern.cpp  pattern.h
src/debug/: coop_debug.cpp  coop_debug.h  crash_handler.cpp  crash_handler.h  disasm_dump.cpp  disasm_dump.h  nearby_scanner.cpp  nearby_scanner.h  remote_log.cpp  remote_log.h
src/engine/: class_factory.cpp  class_factory.h  editor_bridge.cpp  editor_bridge.h  engine_globals.cpp  engine_patch.cpp  engine_patch.h  function_caller.cpp  function_caller.h  gobjects.h  uobject.h  world.cpp  world.h
src/gameplay/: gameplay_mods.cpp  gameplay_mods.h  teleport_plasmid.cpp  teleport_plasmid.h
src/hooks/: d3d9_hook.cpp  d3d9_hook.h  process_event.cpp  process_event.h
src/loader/: CMakeLists.txt  winmm_proxy.cpp  winmm_proxy.def
src/network/: coop_bridge.cpp  coop_bridge.h  coop_economy.cpp  coop_economy.h  coop_inventory.cpp  coop_inventory.h  coop_p2.cpp  coop_p2.h  coop_puppet.cpp  coop_puppet.h  coop_render.cpp  coop_render.h  coop_save.cpp  coop_save.h  coop_sync.cpp  coop_sync.h  coop_testing.cpp  coop_testing.h  coop_transitions.cpp  coop_transitions.h  coop_true.cpp  coop_true.h  coop_world_sync.cpp  coop_world_sync.h  net_common.h  net_manager.cpp  net_manager.h  udp_socket.cpp  udp_socket.h
src/render/: overlay.cpp  overlay.h
src/scripting/: lua_bridge.cpp  lua_bridge.h
src/sdk/: sdk_generator.cpp  sdk_generator.h
tests/: CMakeLists.txt  test_pattern.cpp
tools/: CMakeLists.txt  actor_visualizer_config.py  actor_viz.json  batch_texture_export.py  bsm_export_xref.py  bulk_texture_extract.py  decompile_packages.ps1  map_validation_report.txt  multi_map_validator.py  prop_schema.json  property_db.json  property_editor_schema.py  shader_texture_map.py  shader_to_texture.json  uscript_property_db.py
tools/bsm_tool/: CMakeLists.txt  main.cpp
tools/decompiler/: Program.cs  decompile.csproj
tools/ini_tool/: CMakeLists.txt  main.cpp
tools/level_editor/: BUILD.md  CMakeLists.txt  FindBSP.java  LEVEL_EDITOR.md  ghidra_bsp_analysis.py  ghidra_find_bsp.py  lightmap_Texture42.dds
tools/level_editor/ghidra_scripts/: DecompBSP.java  DecompTargets.java  DecompTraversal.java  FindNodeAccess.java  FindPointRegion.java  FindSerializer.java  UT2004_FindBSPAccess.java  UT2004_FindUVCompute.java
tools/level_editor/scripts/: analyze_bsp_findings.py  dump_bsp_serializers.py  probe_surf_20b.py  scan_ut2004_bsp_detail.py  scan_ut2004_engine.py
tools/level_editor/src/: app.cpp  app.h  bsm_document.cpp  bsm_document.h  bsp_parser.cpp  bsp_parser.h  camera.cpp  camera.h  catalog_parser.cpp  catalog_parser.h  content_browser.cpp  content_browser.h  editor_bridge_client.cpp  editor_bridge_client.h  gl_funcs.cpp  gl_funcs.h  gltf_loader.cpp  main.cpp  mesh_parser.cpp  mesh_parser.h  parse_test.cpp  properties_panel.cpp  properties_panel.h  scene_tree.cpp  scene_tree.h  texture_loader.cpp  texture_loader.h  thumbnail_renderer.cpp  thumbnail_renderer.h  viewport.cpp  viewport.h
tools/lightmap_probe/: CMakeLists.txt  analysis3.txt  blk_lm_00.dds  blk_lm_01.dds  blk_lm_02.dds  blk_lm_03.dds  blk_lm_04.dds  blk_lm_05.dds  blk_lm_06.dds  blk_lm_07.dds  blk_lm_08.dds  blk_lm_09.dds  blk_lm_10.dds  blk_lm_11.dds  blk_lm_12.dds  blk_lm_13.dds  blk_lm_14.dds  blk_lm_15.dds  blk_lm_16.dds  blk_lm_17.dds  blk_lm_18.dds  blk_lm_19.dds  bsm_lm_00.dds  bsm_lm_01.dds  bsm_lm_02.dds  bsm_lm_03.dds  bsm_lm_04.dds  bsm_lm_05.dds  bsm_lm_06.dds  bsm_lm_07.dds  bsm_lm_08.dds  bsm_lm_09.dds  bsm_lm_10.dds  bsm_lm_11.dds  bsm_lm_12.dds  bsm_lm_13.dds  deep_analysis.txt  deep_analysis2.txt  lightmap_01.dds  lightmap_02.dds  (+62 more)
tools/lightmap_probe/variants/: Texture42_B_plus0xD0.dds  Texture42_C_firstNZ.dds  Texture42_D_allmips.dds  Texture42_E_512x512.dds  Texture43_B_plus0xD0.dds  Texture43_D_allmips.dds  Texture43_E_512x512.dds  Texture44_A_raw.dds  Texture44_B_plus0xD0.dds  Texture44_C_firstNZ.dds  (+49 more)
tools/re_tool/: README.md  config.json  re_tool.py
tools/ue_decompiler/: Program.cs
